--- a/vercel.json
+++ b/vercel.json
@@ -2,16 +2,8 @@
     "version": 2,
     "rewrites": [
         {
-            "source": "/api/(.*)",
-            "destination": "/api/index.js"
-        },
-        {
-            "source": "/assets/(.*)",
-            "destination": "/client/dist/assets/$1"
-        },
-        {
             "source": "/(.*)",
-            "destination": "/client/dist/index.html"
+            "destination": "/index.js"
         }
     ]
 }
